# ms3dm_python_lab

./: .bandit  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CI_CD_GUIDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LOGGING_GUIDE.md  Makefile  README.md  SETUP.md  SETUP_JOURNEY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  helpers.py  logging_config.py
examples/: demo_event_bus.py
lessons/: __init__.py
lessons/lab_0001_event_bus/: README.md  __init__.py
lessons/lab_0001_event_bus/event_bus/: __init__.py  async_bus.py  sync_bus.py
lessons/lab_0001_event_bus/tests/: __init__.py  test_async_bus.py  test_sync_bus.py
lessons/lab_0002_config_loader/: README.md  __init__.py
lessons/lab_0002_config_loader/config_loader/: __init__.py  base_loader.py  config_manager.py  env_loader.py  json_loader.py  toml_loader.py  yaml_loader.py
lessons/lab_0002_config_loader/examples/: basic_usage.py  config.json  config.yaml  example.env
lessons/lab_0002_config_loader/tests/: __init__.py  test_base_loader.py  test_config_manager.py  test_env_loader.py  test_json_loader.py  test_toml_loader.py  test_yaml_loader.py
lessons/lab_0003_decorators/: README.md  __init__.py
lessons/lab_0004_ai_agent/: README.md  __init__.py
lessons/lab_0004_ai_agent/ai_agent/: __init__.py  agent_examples.py  config.py  llm_client.py
lessons/lab_0004_ai_agent/exercises/: function_developer.py
lessons/lab_0004_ai_agent/tests/: __init__.py  test_agent_examples.py  test_config.py  test_llm_client.py
lessons/lab_0005_snowflake/: CONFIGURATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md
lessons/lab_0005_snowflake/examples/: basic_operations.py  config_driven_example.py  setup_environment.py  setup_snowflake_user.sql  snowflake.env.template  snowflake_environment.yaml  test_config_system.py  test_connection.py
lessons/lab_0005_snowflake/snowflake_lab/: __init__.py  config.py  config_setup.py  connection.py  data_loader.py  database_manager.py  dataframe_operations.py  environment_config.py  query_builder.py
lessons/lab_0005_snowflake/tests/: __init__.py  test_config.py
notebooks/: Lab_0001_EventBus.ipynb  Lab_0005_Snowflake.ipynb
